--- a/code/neuroglancer.ipynb
+++ b/code/neuroglancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,33 +17,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "pixdim[1,2,3] should be positive; setting to abs of pixdim values\n",
-      "Level 35:nibabel.global:pixdim[1,2,3] should be positive; setting to abs of pixdim values\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of the data from ../data/angio.nii.gz: (147, 200, 135)\n",
-      "Affine of the data from ../data/angio.nii.gz:\n",
-      "[[  0.2         -0.          -0.         -14.60000038]\n",
-      " [ -0.           0.2         -0.         -14.40000057]\n",
+      "Shape of the data from /Users/yibeichen/Desktop/fusi_test_0725/fus2mri/fusi_corrected-transformed.nii.gz: (147, 200, 135)\n",
+      "Affine of the data from /Users/yibeichen/Desktop/fusi_test_0725/fus2mri/fusi_corrected-transformed.nii.gz:\n",
+      "[[  0.2          0.          -0.         -14.60000038]\n",
+      " [  0.           0.2         -0.         -14.40000057]\n",
       " [  0.           0.           0.2         -3.60000014]\n",
       " [  0.           0.           0.           1.        ]]\n",
-      "Shape of the data from ../data/fusi.nii: (192, 151, 173)\n",
-      "Affine of the data from ../data/fusi.nii:\n",
-      "[[ -0.11         0.           0.          10.50499994]\n",
-      " [  0.           0.2          0.         -15.00000022]\n",
-      " [  0.           0.           0.09856     -8.47615983]\n",
-      " [  0.           0.           0.           1.        ]]\n"
+      "Shape of the data from /Users/yibeichen/Desktop/fusi_test_0725/Zion_3D_corrected.nii.gz: (128, 37, 153)\n",
+      "Affine of the data from /Users/yibeichen/Desktop/fusi_test_0725/Zion_3D_corrected.nii.gz:\n",
+      "[[0.      0.2     0.      0.     ]\n",
+      " [0.11    0.      0.      0.     ]\n",
+      " [0.      0.      0.09856 0.     ]\n",
+      " [0.      0.      0.      1.     ]]\n"
      ]
     }
    ],
@@ -57,16 +49,16 @@
     "    return data, affine\n",
     "\n",
     "# Paths to your NIfTI files\n",
-    "angio_file = '../data/angio.nii.gz'\n",
-    "fusi_file = '../data/fusi.nii'\n",
+    "file1 = '/Users/yibeichen/Desktop/fusi_test_0725/fus2mri/fusi_corrected-transformed.nii.gz'\n",
+    "file2 = '/Users/yibeichen/Desktop/fusi_test_0725/Zion_3D_corrected.nii.gz'\n",
     "\n",
-    "data1, affine1 = read_nifti_file(angio_file)\n",
-    "data2, affine2 = read_nifti_file(fusi_file)\n"
+    "data1, affine1 = read_nifti_file(file1)\n",
+    "data2, affine2 = read_nifti_file(file2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://127.0.0.1:64140/v/9a3821912b0f11635c24225da4d100f3ab3a2b18/\n"
+      "http://127.0.0.1:60472/v/715b70025fc4dd2be8be88504975469bf86b2ef6/\n"
      ]
     }
    ],
@@ -146,13 +138,13 @@
     "    with viewer.txn() as s:\n",
     "        s.dimensions = unified_dimensions  # Use unified dimensions\n",
     "        \n",
-    "        s.layers[\"nifti1\"] = neuroglancer.SegmentationLayer(\n",
+    "        s.layers[\"nifti1\"] = neuroglancer.ImageLayer(\n",
     "            source=[\n",
     "                neuroglancer.LocalVolume(data=data1.astype(np.uint32), dimensions=unified_dimensions)\n",
     "            ],\n",
     "        )\n",
     "\n",
-    "        s.layers[\"nifti2\"] = neuroglancer.SegmentationLayer(\n",
+    "        s.layers[\"nifti2\"] = neuroglancer.ImageLayer(\n",
     "            source=[\n",
     "                neuroglancer.LocalVolume(data=data2.astype(np.uint32), dimensions=unified_dimensions)\n",
     "            ],\n",
