change some file path for registration

--- a/code/registration.ipynb
+++ b/code/registration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "\n",
     "import nibabel as nib\n",
     "import numpy as np\n",
-    "import ants\n",
+    "\n",
+    "from nibabel.orientations import aff2axcodes\n",
     "from skimage.restoration import denoise_nl_means, estimate_sigma\n",
     "from skimage import exposure\n",
     "\n",
@@ -26,14 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +43,7 @@
     }
    ],
    "source": [
-    "file = \"/Users/yibeichen/Desktop/fusi_test_0725/fusi.nii.gz\"\n",
+    "file = \"/Users/yibeichen/Desktop/fusi/raw_data/fusi.nii.gz\"\n",
     "img = nib.load(file)\n",
     "data = img.get_fdata()\n",
     "\n",
@@ -71,13 +65,91 @@
     "\n",
     "new_img = nib.Nifti1Image(flipped_data, transformed_affine, img.header)\n",
     "\n",
-    "output_file = \"/Users/yibeichen/Desktop/fusi_test_0725/fusi_corrected.nii.gz\"\n",
+    "output_file = \"/Users/yibeichen/Desktop/fusi/raw_data/fusi_corrected.nii.gz\"\n",
     "# nib.save(new_img, output_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((128, 37, 153),\n",
+       " array([[ 0.11   ,  0.     ,  0.     , -0.     ],\n",
+       "        [ 0.     ,  0.2    ,  0.     , -0.     ],\n",
+       "        [ 0.     ,  0.     , -0.09856,  0.     ],\n",
+       "        [ 0.     ,  0.     ,  0.     ,  1.     ]]),\n",
+       " ('R', 'A', 'I'))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = \"/Users/yibeichen/Desktop/fusi/raw_data/Zion_3D.nii.gz\"\n",
+    "img = nib.load(file)\n",
+    "data = img.get_fdata()\n",
+    "\n",
+    "data.shape,img.affine, aff2axcodes(img.affine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((128, 36, 153),\n",
+       " array([[ 0.11   ,  0.     ,  0.     , -0.     ],\n",
+       "        [ 0.     ,  0.2    ,  0.     , -0.     ],\n",
+       "        [ 0.     ,  0.     , -0.09856,  0.     ],\n",
+       "        [ 0.     ,  0.     ,  0.     ,  1.     ]]),\n",
+       " ('R', 'A', 'I'))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = \"/Users/yibeichen/Desktop/fusi/raw_data/Grouper_3D.nii.gz\"\n",
+    "img = nib.load(file)\n",
+    "data = img.get_fdata()\n",
+    "\n",
+    "data.shape,img.affine, aff2axcodes(img.affine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = \"/Users/yibeichen/Desktop/fusi/raw_data/Zion_audio_0229.nii.gz\"\n",
+    "img = nib.load(file)\n",
+    "data = img.get_fdata()\n",
+    "\n",
+    "data.shape,img.affine, aff2axcodes(img.affine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -90,49 +162,21 @@
     {
      "data": {
       "text/plain": [
-       "((192, 46, 183),\n",
-       " array([[-0.11      ,  0.        ,  0.        , 10.50499994],\n",
-       "        [ 0.        ,  0.2       ,  0.        , -4.50000007],\n",
-       "        [ 0.        ,  0.        ,  0.09856   , -8.96895982],\n",
-       "        [ 0.        ,  0.        ,  0.        ,  1.        ]]))"
+       "((128, 1, 153, 4500),\n",
+       " array([[-0.11      ,  0.        ,  0.        ,  6.98499996],\n",
+       "        [ 0.        ,  0.40000001,  0.        , -0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.09856   , -7.49055985],\n",
+       "        [ 0.        ,  0.        ,  0.        ,  1.        ]]),\n",
+       " ('L', 'A', 'S'))"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file = \"/Users/yibeichen/Desktop/fusi_test_0725/Charmander_3D.nii\"\n",
-    "img = nib.load(file)\n",
-    "data = img.get_fdata()\n",
-    "\n",
-    "data.shape,img.affine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((192, 46, 183),\n",
-       " array([[ 0.11   ,  0.     ,  0.     , -0.     ],\n",
-       "        [ 0.     ,  0.2    ,  0.     , -0.     ],\n",
-       "        [ 0.     ,  0.     , -0.09856,  0.     ],\n",
-       "        [ 0.     ,  0.     ,  0.     ,  1.     ]]),\n",
-       " ('R', 'A', 'I'))"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file = \"/Users/yibeichen/Desktop/fusi_test_0725/Charmander_3D.nii.gz\"\n",
+    "file = \"/Users/yibeichen/Desktop/fusi/raw_data/Zion_Marmo_Audio_Chaoyi_0229_2.5Hz_2Dscan_2.nii\"\n",
     "img = nib.load(file)\n",
     "data = img.get_fdata()\n",
     "\n",
@@ -141,27 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('R', 'A', 'I')"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# correct orientation S/I\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -183,12 +207,15 @@
       " [0.      0.2     0.      0.     ]\n",
       " [0.      0.      0.09856 0.     ]\n",
       " [0.      0.      0.      1.     ]]\n",
-      "(128, 37, 153)\n"
+      "[[0.      0.2     0.      0.     ]\n",
+      " [0.11    0.      0.      0.     ]\n",
+      " [0.      0.      0.09856 0.     ]\n",
+      " [0.      0.      0.      1.     ]] ('A', 'R', 'S')\n"
      ]
     }
    ],
    "source": [
-    "file = \"/Users/yibeichen/Desktop/fusi/raw_data/Zion_3D.nii.gz\"\n",
+    "file = \"/Users/yibeichen/Desktop/fusi/raw_data/Grouper_3D.nii.gz\"\n",
     "img = nib.load(file)\n",
     "data = img.get_fdata()\n",
     "\n",
@@ -223,14 +250,14 @@
     "print(\"RAS Affine:\\n\", ras_affine)\n",
     "\n",
     "# flip A/P (data was wrong) and S/I(match transformed affine)\n",
-    "flipped_data = np.flip(np.flip(np.flip(data, axis=0), axis=1), axis=2)\n",
-    "# flipped_data = np.flip(np.flip(data, axis=0), axis=2)\n",
+    "# flipped_data = np.flip(np.flip(np.flip(data, axis=0), axis=1), axis=2)\n",
+    "flipped_data = np.flip(np.flip(data, axis=0), axis=2)\n",
     "\n",
     "new_img = nib.Nifti1Image(flipped_data, transformed_affine, img.header)\n",
-    "print(new_img.get_fdata().shape)\n",
+    "print(new_img.affine, aff2axcodes(new_img.affine))\n",
     "\n",
-    "output_file = \"/Users/yibeichen/Desktop/fusi/raw_data/Zion_3D_corrected.nii.gz\"\n",
-    "# nib.save(new_img, output_file)"
+    "output_file = \"/Users/yibeichen/Desktop/fusi/raw_data/Grouper_3D_corrected.nii.gz\"\n",
+    "nib.save(new_img, output_file)"
    ]
   },
   {
