--- a/code/registration.ipynb
+++ b/code/registration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pixdim[1,2,3] should be positive; setting to abs of pixdim values\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((128, 37, 153),\n",
+       " array([[-0.11      ,  0.        ,  0.        ,  6.98499996],\n",
+       "        [ 0.        ,  0.2       ,  0.        , -3.60000005],\n",
+       "        [ 0.        ,  0.        ,  0.09856   , -7.49055985],\n",
+       "        [ 0.        ,  0.        ,  0.        ,  1.        ]]),\n",
+       " ('L', 'A', 'S'))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = \"/Users/yibeichen/Desktop/fusi/raw_data/Zion_3D.nii\"\n",
+    "img = nib.load(file)\n",
+    "data = img.get_fdata()\n",
+    "\n",
+    "data.shape,img.affine, aff2axcodes(img.affine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +121,7 @@
        " ('R', 'A', 'I'))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
