add notes & correction

--- a/code/glm.ipynb
+++ b/code/glm.ipynb
@@ -95,6 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# outcome only\n",
     "event_df1 = pd.DataFrame(columns=['onset', 'trial_type', 'duration', 'raw_onset'], index=range(len(behave_codes)))\n",
     "\n",
     "for i, (c, s) in enumerate(zip(behave_codes, absolute_starttime)):\n",
@@ -120,6 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# cue + outcome\n",
     "event_df2 = pd.DataFrame(columns=['onset', 'trial_type', 'duration', 'raw_onset'], index=range(len(behave_codes)))\n",
     "\n",
     "for i, (c, s) in enumerate(zip(behave_codes, absolute_starttime)):\n",
@@ -145,6 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# cue only\n",
     "event_df3 = pd.DataFrame(columns=['onset', 'trial_type', 'duration', 'raw_onset'], index=range(len(behave_codes)))\n",
     "\n",
     "for i, (c, s) in enumerate(zip(behave_codes, absolute_starttime)):\n",
@@ -1006,6 +1009,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Outcome only"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 249,
    "metadata": {},
@@ -1061,6 +1078,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cue + Outcome"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 250,
    "metadata": {},
@@ -1093,6 +1117,13 @@
     "\n",
     "# Show the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cue only"
    ]
   },
   {
