--- a/code/102124_updates.ipynb
+++ b/code/102124_updates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,24 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "++ Making working directory: ./__workdir_desphinxify_z2BoCOo49XO\n",
+      "++ Making working directory: ./__workdir_desphinxify_sOBQ9CGkzks\n",
       "++ 3dcalc: AFNI version=AFNI_24.1.16 (Jun  6 2024) [64-bit]\n",
       "++ Authored by: A cast of thousands\n",
-      "++ Output dataset ././__workdir_desphinxify_z2BoCOo49XO/__tmp_00_copy.nii\n",
+      "++ Output dataset ././__workdir_desphinxify_sOBQ9CGkzks/__tmp_00_copy.nii\n",
       "++ 3drefit: AFNI version=AFNI_24.1.16 (Jun  6 2024) [64-bit]\n",
       "++ Authored by: RW Cox\n",
       "++ Processing AFNI dataset __tmp_01.nii\n",
       " + changing orientation codes\n",
-      " + loading and re-writing dataset __tmp_01.nii (/Users/yibeichen/Desktop/fusi/microCT/__workdir_desphinxify_z2BoCOo49XO/__tmp_01.nii in NIFTI storage)\n",
+      " + loading and re-writing dataset __tmp_01.nii (/Users/yibeichen/Desktop/fusi/microCT/__workdir_desphinxify_sOBQ9CGkzks/__tmp_01.nii in NIFTI storage)\n",
       "++ 3drefit processed 1 datasets\n",
       "++ 3dcopy: AFNI version=AFNI_24.1.16 (Jun  6 2024) [64-bit]\n",
+      "\u001b[7m** ERROR:\u001b[0m output dataset name 'MASK_Marmoset1_skull_200micron_DSPH.nii.gz' conflicts with existing file\n",
+      "\u001b[7m** ERROR:\u001b[0m dataset NOT written to disk!\n",
       "++ Clean working dir\n",
       "\n",
       "++ DONE. See the output:\n",
@@ -78,7 +80,10 @@
    "source": [
     "os.chdir(ct_dir)\n",
     "\n",
-    "!desphinxify -orient_mid RIP -input MASK_Marmoset1_skull_200micron.nii.gz -prefix MASK_Marmoset1_skull_200micron_DSPH.nii.gz\n"
+    "!desphinxify -orient_mid RIP -input MASK_Marmoset1_skull_200micron.nii.gz -prefix MASK_Marmoset1_skull_200micron_DSPH.nii.gz\n",
+    "\n",
+    "# the brain is not labeled as sphinxified so this is not working\n",
+    "# !desphinxify -orient_mid RIP -input MASK_Marmosete_brain_B_200micron.nii.gz -prefix MASK_Marmosete_brain_B_200micron_DSPH.nii.gz\n"
    ]
   },
   {
